Fix editing redirect and project badge alignment.

--- a/assets/sass/components/projectBadge.scss
+++ b/assets/sass/components/projectBadge.scss
@@ -1,3 +1,8 @@
+.project-badge {
+  display: flex;
+  align-items: center;
+}
+
 .project-badge svg {
   margin-right: $space * 2;
 }
